--- a/index.html
+++ b/index.html
@@ -367,20 +367,22 @@
     </section>
   </main>
 
-  <!-- подвал conteiner -->
+  <!-- подвал conteiner копия как в главной стринице-->
   <footer  class="footer-conteiner">
     <div class="conteiner">
       <!-- левая верхняячасть футера -->
       <div class="footer-address">
-        <a  class="logo" href="#"><b>Web&nbsp;<span class="logo-white">Studio</span></b></a>
+        <a  class="logo" href="#">
+          <b>Web&nbsp;<span class="logo-white">Studio</span></b>
+        </a>
         <address class="map">
           г. Киев, пр-т Леси Украинки, 26
         </address>
-        <a class="mail-content">
+        <a class="mail-content" href="mailto:info@devstudio.com" >
           info@devstudio.com
         </a>
-        <a class="tel-content">
-          &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+        <a class="tel-content" href="tel:+380961111111">
+         +38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
         </a>
       </div>
       <!-- средняя верхняя часть футера -->
@@ -418,8 +420,7 @@
             </a>
           </li>
         </ul>
-      </div>      
-
+      </div>   
       <!-- правая верхняя часть футера с подпиской -->
       <div class="subscribe-box">
         <form action="forma">
@@ -438,7 +439,6 @@
         </form>
       </div>        
     </div> 
-
     <!-- общяя\центральная нижняя часть футера -->
     <p class="developed">
       2020 | Developed by GoIT Students
