--- a/portfolio.html
+++ b/portfolio.html
@@ -165,12 +165,12 @@
         <address class="map">
           г. Киев, пр-т Леси Украинки, 26
         </address>
-        <p class="mail-content">
+        <a class="mail-content" href="mailto:info@devstudio.com" >
           info@devstudio.com
-        </p>
-        <p class="tel-content">
-          &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
-        </p>
+        </a>
+        <a class="tel-content" href="tel:+380961111111">
+         +38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+        </a>
       </div>
       <!-- средняя верхняя часть футера -->
       <div class="footer-cammon">
